# spark-viewer-tui

./: .gitignore  PUBLISH.md  README.md  app.py  config.py  ignorar.txt  pyproject.toml  queries.py  seed.py  spark_manager.py  themes.json  themes.py
.github/workflows/: publish.yml
screens/: load_query.py  save_query.py  spark_config.py  theme_selector.py
src/spark_viewer_tui/: __init__.py  app.py  client.py  config.py  ipc_server.py  seed.py  spark_manager.py  themes.py
src/spark_viewer_tui/examples/: spark_example.py
src/spark_viewer_tui/screens/: load_query.py  save_query.py  spark_config.py  theme_selector.py
