[project]
name = "spark-viewer-tui"
version = "0.1.0"
description = "A terminal UI for browsing and querying Delta/Parquet tables with Spark"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Eriton Gomes", email = "eriton.gomes.souza@gmail.com" }]
dependencies = ["textual[syntax]>=7.5.0", "pyspark>=3.5.0,<4.0.0"]

[project.scripts]
spark-viewer = "app:main"
spark-viewer-seed = "seed:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app.py", "config.py", "spark_manager.py", "queries.py", "themes.py", "seed.py", "screens"]
