[project]
name = "spark-viewer-tui"
version = "0.1.5"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Eriton Gomes", email = "eriton.gomes.souza@gmail.com" }]
dependencies = ["textual[syntax]>=7.5.0", "pyspark>=3.5.0,<4.0.0"]

[project.scripts]
spark-viewer = "spark_viewer_tui.app:main"
spark-viewer-seed = "spark_viewer_tui.seed:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spark_viewer_tui"]
